tests/cases/meta/ok/meta-function-ast-return.ari
meta fn answer(input: ast) -> ast {
  return 40 + 2;
}

fn main() -> i64 {
  return answer!(1 + 1);
}
