tests/cases/meta/errors/matches-macro-pattern-type.ari
fn main() -> i64 {
  if matches!(1, true) {
    return 1;
  }
  return 0;
}
